package sample;

public enum TypeOfAmmo {
    RIGHT,
    LEFT,
    CENTER
}
